# shelly-homekit

./: .gitignore  CMakeLists.txt  mos.yml  mosbuild  mosbuild32  mosbuild32.sh
fs/: index.html
src/: shelly_main.c  shelly_sw_service.c
